--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>HELLO WORLD</h1>
-    <footer>Coded by Thendo Mphaphuli</footer>
+    <p>
+      This project was coded by
+      <a href="https://github.com/Thendow" target="_blank">Thendo Mphaphuli</a>
+      and is
+      <a href="https://github.com/Thendow/weather.forecast" target="_blank">
+        on GitHub</a
+      >
+      and
+      <a href="https://thendow.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >
+    </p>
   </body>
 </html>
