updated the footer content

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <p>
       This project was coded by
       <a href="https://github.com/Thendow" target="_blank">Thendo Mphaphuli</a>
-      and is
+      and is on
       <a href="https://github.com/Thendow/weather.forecast" target="_blank">
-        on GitHub</a
+        GitHub</a
       >
-      and
-      <a href="https://thendow.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >
+      and hosted on
+      <a href="https://thendow.netlify.app/" target="_blank">Netlify</a>
     </p>
   </body>
 </html>
