--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>HELLO WORLD</h1>
     <p>
-      Coded by
+      This project wa coded by
       <a href="https://github.com/Thendow" target="_blank">Thendo Mphaphuli</a>
       and is on
       <a href="https://github.com/Thendow/weather.forecast" target="_blank">
