added basic HTML index to the file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
-    <p>
-      This project wa coded by
+    <div class="form"></div>
+    <div class="search"></div>
+    <input type="text" placeholder="enter a city" ...required />
+    <button><img src="images/search.png" /></button>
+    <div class="weather"></div>
+    <img src="images/rain.png" class="weather-icon" />
+    <h1 class="temperature">24°C</h1>
+    <h2 class="city">Paris</h2>
+    <div class="details"></div>
+    <div class="col"></div>
+    <img src="images/humidity.png" />
+    <div>
+      <p class="humidity">87%</p>
+      <p>Humidity</p>
+    </div>
+    <div class="col"></div>
+    <img src="images/wind.png" />
+    <div>
+      <p class="wind">7.2km/h</p>
+      <p>Wind speed</p>
+    </div>
+    <footer>
+      This p>roject was coded by
       <a href="https://github.com/Thendow" target="_blank">Thendo Mphaphuli</a>
       and is on
       <a href="https://github.com/Thendow/weather.forecast" target="_blank">
@@ -16,6 +36,6 @@
       >
       and hosted on
       <a href="https://thendow.netlify.app/" target="_blank">Netlify</a>
-    </p>
+    </footer>
   </body>
 </html>
