--- a/index.html
+++ b/index.html
@@ -3,39 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather-App</title>
   </head>
   <body>
-    <div class="form"></div>
-    <div class="search"></div>
-    <input type="text" placeholder="enter a city" ...required />
-    <button><img src="images/search.png" /></button>
-    <div class="weather"></div>
-    <img src="images/rain.png" class="weather-icon" />
-    <h1 class="temperature">24°C</h1>
-    <h2 class="city">Paris</h2>
-    <div class="details"></div>
-    <div class="col"></div>
-    <img src="images/humidity.png" />
+    <div class="form">
+      <div class="search">
+        <input type="text" placeholder="Enter a city" .. required />
+      <button><img src="images/search.png" /></button>
+      </div>
+      <div class="weather">
+      <img src="images/rain.png" class="weather-icon" />
+      <h1 class="temperature">24°C</h1>
+      <h2 class="city">Paris</h2>
+      <div class="details">
+      <div class="col">
+      <img src="images/humidity.png">
     <div>
       <p class="humidity">87%</p>
       <p>Humidity</p>
     </div>
-    <div class="col"></div>
-    <img src="images/wind.png" />
+      </div>
+    <div class="col">
+    <img src="images/wind.png">
     <div>
       <p class="wind">7.2km/h</p>
       <p>Wind speed</p>
     </div>
-    <footer>
-      This p>roject was coded by
-      <a href="https://github.com/Thendow" target="_blank">Thendo Mphaphuli</a>
-      and is on
-      <a href="https://github.com/Thendow/weather.forecast" target="_blank">
-        GitHub</a
-      >
-      and hosted on
-      <a href="https://thendow.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <p class="footer">
+      This project was coded by
+          <a href="https://github.com/Thendow" target="_blank"
+            >Thendo</a
+          >
+          and is on
+          <a href="https://github.com/Thendow/letscode" target="_blank">
+          GitHub</a
+          >
+          and hosted on
+          <a href="https://illustrious-elf-b45598.netlify.app/" target="_blank"
+            >Netlify</a
+          >
+    </p>
   </body>
+  <script src="src/index.js"></script>
 </html>
