--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <button><img src="images/search.png" /></button>
       </div>
       <div class="weather">
-      <img src="images/rain.png" class="weather-icon" />
+      <img src="images/clear.png" class="weather-icon" />
       <h1 class="temperature">24°C</h1>
       <h2 class="city">Paris</h2>
+      <h3 class="description">moderate rainfall</h3>
       <div class="details">
       <div class="col">
       <img src="images/humidity.png">
@@ -36,7 +37,7 @@
             >Thendo</a
           >
           and is on
-          <a href="https://github.com/Thendow/letscode" target="_blank">
+          <a href="https://github.com/Thendow/weather.forecast" target="_blank">
           GitHub</a
           >
           and hosted on
