edited HTML and CSS index on the file

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <div class="form">
+      <header>
       <div class="search">
         <input type="text" placeholder="Enter a city" .. required />
       <button><img src="images/search.png" /></button>
       </div>
+      </header>
+      <main>
       <div class="weather">
       <img src="images/clear.png" class="weather-icon" />
       <h1 class="temperature">24°C</h1>
@@ -31,20 +34,22 @@
       <p class="wind">7.2km/h</p>
       <p>Wind speed</p>
     </div>
-    <p class="footer">
-      This project was coded by
+  </main>
+  <footer>
+        <p>
+          This project was coded by
           <a href="https://github.com/Thendow" target="_blank"
             >Thendo</a
           >
           and is on
-          <a href="https://github.com/Thendow/weather.forecast" target="_blank">
-          GitHub</a
+          <a href="https://github.com/Thendow/weather.forecast" target="_blank">GitHub</a
           >
           and hosted on
           <a href="https://illustrious-elf-b45598.netlify.app/" target="_blank"
             >Netlify</a
           >
-    </p>
+        </p>
+      </footer>
   </body>
   <script src="src/index.js"></script>
 </html>
