--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <main>
       <div class="weather">
       <img src="images/clear.png" class="weather-icon" />
-      <h1 class="temperature">24°C</h1>
+      <h1 class="temp">24°C</h1>
       <h2 class="city">Paris</h2>
-      <h3 class="description">moderate rainfall</h3>
+      <h3 class="description">Clear sky</h3>
       <div class="details">
       <div class="col">
       <img src="images/humidity.png">
@@ -31,7 +31,7 @@
     <div class="col">
     <img src="images/wind.png">
     <div>
-      <p class="wind">7.2km/h</p>
+      <p class="wind">7.2 km/h</p>
       <p>Wind speed</p>
     </div>
   </main>
@@ -45,7 +45,7 @@
           <a href="https://github.com/Thendow/weather.forecast" target="_blank">GitHub</a
           >
           and hosted on
-          <a href="https://illustrious-elf-b45598.netlify.app/" target="_blank"
+          <a href="https://thendoweather.netlify.app/" target="_blank"
             >Netlify</a
           >
         </p>
