--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather-App</title>
   </head>
   <body>
-    <div class="form">
+    <div class="card">
       <header>
       <div class="search">
         <input type="text" placeholder="Enter a city" .. required />
